[package]
name = "hashtable_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.131", features = ["derive"] }
structopt = "0.3.25"
rand = { version = "0.8.5", features = ["small_rng"] }
scopeguard = "1"